<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000A">

        <TextView
            android:id="@+id/nemate_racun"
            android:layout_width="355dp"
            android:layout_height="30.6dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="580dp"
            android:gravity="center"
            android:text="@string/nemate_ra_un__registrirajte_se__string"
            android:textColor="@color/neki_motivirajuci_citat_od_shvajcenegera_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/registriraj_se"
            android:layout_width="355dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="230dp"
            android:gravity="center"
            android:text="@string/prijavi_se_string"
            android:textColor="@color/neki_motivirajuci_citat_od_shvajcenegera_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="630dp">

            <View
                android:id="@+id/registerNow"
                android:layout_width="348dp"
                android:layout_height="56dp"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="-1dp"
                android:background="@drawable/_bg__button_outline_ek1_shape" />

            <TextView
                android:id="@+id/textRegisternow"
                android:layout_width="103dp"
                android:layout_height="28.6dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="123dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/bot_o_ek1_string"
                android:textColor="@color/bot_o_ek1_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="79dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="68dp">

            <View
                android:id="@+id/_bg__logo_ek1"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__logo_ek1_shape" />


            <RelativeLayout
                android:id="@+id/frame_34198"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59.5dp"
                android:layout_marginTop="0dp">

                <View
                    android:id="@+id/_bg__frame_34198_ek1"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/_bg__frame_34198_ek1_shape" />


                <RelativeLayout
                    android:id="@+id/barbell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp">

                    <View
                        android:id="@+id/_bg__barbell_ek1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/_bg__barbell_ek1_shape" />

                    <ImageView
                        android:id="@+id/vector__stroke_"
                        android:layout_width="8.75dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="7.5dp"
                        android:layout_marginTop="7.5dp"
                        android:contentDescription="vector__stroke_"
                        android:src="@drawable/vector__stroke_" />

                    <ImageView
                        android:id="@+id/vector__stroke__ek1"
                        android:layout_width="8.75dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="23.75dp"
                        android:layout_marginTop="7.5dp"
                        android:contentDescription="vector__stroke__ek1"
                        android:src="@drawable/vector__stroke__ek1" />

                    <ImageView
                        android:id="@+id/vector__stroke__ek2"
                        android:layout_width="7.5dp"
                        android:layout_height="17.5dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="11.25dp"
                        android:contentDescription="vector__stroke__ek2"
                        android:src="@drawable/vector__stroke__ek2" />

                    <ImageView
                        android:id="@+id/vector__stroke__ek3"
                        android:layout_width="7.5dp"
                        android:layout_height="17.5dp"
                        android:layout_marginStart="2.5dp"
                        android:layout_marginTop="11.25dp"
                        android:contentDescription="vector__stroke__ek3"
                        android:src="@drawable/vector__stroke__ek3" />

                    <ImageView
                        android:id="@+id/vector__stroke__ek4"
                        android:layout_width="12.5dp"
                        android:layout_height="2.5dp"
                        android:layout_marginStart="13.75dp"
                        android:layout_marginTop="18.75dp"
                        android:contentDescription="vector__stroke__ek4"
                        android:src="@drawable/vector__stroke__ek4" />

                    <ImageView
                        android:id="@+id/vector__stroke__ek5"
                        android:layout_width="5dp"
                        android:layout_height="2.5dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="18.75dp"
                        android:contentDescription="vector__stroke__ek5"
                        android:src="@drawable/vector__stroke__ek5" />

                    <ImageView
                        android:id="@+id/vector__stroke__ek6"
                        android:layout_width="5dp"
                        android:layout_height="2.5dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="18.75dp"
                        android:contentDescription="vector__stroke__ek6"
                        android:src="@drawable/vector__stroke__ek6" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/more"
                    android:layout_width="86dp"
                    android:layout_height="41.8dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="3.5dp"
                    android:gravity="center"
                    android:text="@string/more_string"
                    android:textColor="@color/more_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/neki_motivirajuci_citat_od_shvajcenegera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/citat"
                android:textColor="@color/neki_motivirajuci_citat_od_shvajcenegera_color"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text_field"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="300dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/_bg__text_field_ek1_shape"
                    android:hint="@string/text_string" />

            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text_field_ek3"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="372dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_bg__text_field_ek3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/_bg__text_field_ek1_shape"
                    android:hint="@string/text_ek1_string" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="460dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <View
                android:id="@+id/btn_login"
                android:layout_width="348dp"
                android:layout_height="56dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__button_solid_ek1_shape" />

            <TextView
                android:id="@+id/bot_o"
                android:layout_width="74dp"
                android:layout_height="28.6dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="137.5dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/bot_o_string"
                android:textColor="@color/more_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>