<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#202024"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/profil"
            android:textColor="#FFFF"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/profil_promjeni_fotografiju"
            android:textColor="@color/bot_o_ek1_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/text_field"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <View
                android:id="@+id/_bg__text_field_ek1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__text_field_ek1_shape" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="28.6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/text_string"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text_field"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <View
                android:id="@+id/_bg__text_field_ek1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__text_field_ek1_shape" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="28.6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/text_string"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <View
                android:id="@+id/btn_logout"
                android:layout_width="348dp"
                android:layout_height="56dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__button_solid_ek1_shape" />

            <TextView
                android:id="@+id/bot_o"
                android:layout_width="74dp"
                android:layout_height="28.6dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="137.5dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/more_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:background="#202024"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/account_green" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>