<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#202024"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="350dp"
                android:layout_weight="1"
                android:background="#202024"
                android:src="@drawable/back_green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:text="@string/vjezba1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="#202024"
                android:src="@drawable/man" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="end"
                android:text="@string/prsa_string_lower"
                android:textColor="#7C7C8A" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:background="#29292E"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/barbell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp">

                <View
                    android:id="@+id/_bg__barbell_ek1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="#29292E" />

                <ImageView
                    android:id="@+id/vector__stroke_"
                    android:layout_width="8.75dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="7.5dp"
                    android:layout_marginTop="7.5dp"
                    android:contentDescription="vector__stroke_"
                    android:src="@drawable/vector__stroke_" />

                <ImageView
                    android:id="@+id/vector__stroke__ek1"
                    android:layout_width="8.75dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="23.75dp"
                    android:layout_marginTop="7.5dp"
                    android:contentDescription="vector__stroke__ek1"
                    android:src="@drawable/vector__stroke__ek1" />

                <ImageView
                    android:id="@+id/vector__stroke__ek2"
                    android:layout_width="7.5dp"
                    android:layout_height="17.5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="11.25dp"
                    android:contentDescription="vector__stroke__ek2"
                    android:src="@drawable/vector__stroke__ek2" />

                <ImageView
                    android:id="@+id/vector__stroke__ek3"
                    android:layout_width="7.5dp"
                    android:layout_height="17.5dp"
                    android:layout_marginStart="2.5dp"
                    android:layout_marginTop="11.25dp"
                    android:contentDescription="vector__stroke__ek3"
                    android:src="@drawable/vector__stroke__ek3" />

                <ImageView
                    android:id="@+id/vector__stroke__ek4"
                    android:layout_width="12.5dp"
                    android:layout_height="2.5dp"
                    android:layout_marginStart="13.75dp"
                    android:layout_marginTop="18.75dp"
                    android:contentDescription="vector__stroke__ek4"
                    android:src="@drawable/vector__stroke__ek4" />

                <ImageView
                    android:id="@+id/vector__stroke__ek5"
                    android:layout_width="5dp"
                    android:layout_height="2.5dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="18.75dp"
                    android:contentDescription="vector__stroke__ek5"
                    android:src="@drawable/vector__stroke__ek5" />

                <ImageView
                    android:id="@+id/vector__stroke__ek6"
                    android:layout_width="5dp"
                    android:layout_height="2.5dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="18.75dp"
                    android:contentDescription="vector__stroke__ek6"
                    android:src="@drawable/vector__stroke__ek6" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/serije"
                android:textColor="#C4C4CC" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#29292E"
                android:src="@drawable/repeat_green" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/ponaljanja"
                android:textColor="#C4C4CC" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:background="#202024"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/home_green" />

        <ImageButton
            android:id="@+id/imageButtonStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/imageButtonProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:src="@drawable/account" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>